Add 'Retos DEV.F' link to navigation and create retos.html for challenge details

--- a/ProyectoBecaTechCh/index.html
+++ b/ProyectoBecaTechCh/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#productos" class="changa-one-regular">Productos</a></li>
                 <li><a href="#servicios" class="changa-one-regular">Servicios</a></li>
                 <li><a href="#contacto" class="changa-one-regular">Contacto</a></li>
+                <li><a href="retos.html" class="changa-one-regular">Retos DEV.F</a></li>
             </ul>
 
         </nav>
