Refactor cookie consent section for improved accessibility and styling

--- a/ProyectoBecaTechCh/index.html
+++ b/ProyectoBecaTechCh/index.html
@@ -181,14 +181,15 @@
                 <button type="submit">Saber Pokémon</button>
             </form>
         </section>
-        <div class="cookie-footer">
+        <input type="checkbox" id="cookies-accepted" style="display: none;">
 
-            <p>Este sitio utiliza cookies para mejorar la experiencia. <a href="#cookies-policy">Más información</a>.
-            </p>
-
-            <button class="cookie-accept">Aceptar</button>
-
-        </div>
+<div class="cookie-footer">
+    <p>Este sitio utiliza cookies para mejorar la experiencia. 
+       <a href="#cookies-policy">Más información</a>.
+    </p>
+    
+    <label for="cookies-accepted" class="cookie-accept">Aceptar</label>
+</div>
     </main>
 
     <footer>
