Add Changa One font styling to various elements and enhance modal button size

--- a/ProyectoBecaTechCh/index.html
+++ b/ProyectoBecaTechCh/index.html
@@ -49,7 +49,7 @@
             <h2>Todo lo que tu mascota necesita en un solo lugar</h2>
         </section>
         <section id="datoscuriosos">
-            <div class="sticky">
+            <div class="sticky changa-one-regular">
                 Aprovecha las mejores ofertas navideñas 🎄🐶🐱
             </div>
             <h2>Para tus mascotas</h2>
@@ -100,7 +100,7 @@
 
         </section>
         <section class="contenedor-principal" id="contacto" aria-labelledby="form-title">
-            <h2 id="form-title">Contáctanos </h2> <button type="abrirModal"><a href="#formulario-contacto"
+            <h2 id="form-title">Contáctanos </h2> <button id="abrirModal" type="abrirModal"><a href="#formulario-contacto"
                     class="changa-one-regular">Da clic aquí</a></button>
 
 
@@ -231,7 +231,7 @@
         </p>
         <p>© Mascotas Los mejores Amigos. 2025. Todos los derechos reservados.</p>
     </footer>
-    <div class="fixed">
+    <div class="fixed changa-one-regular">
         <p>Chatea con nosotros 📞📲</p>
     </div>
 </body>
