Update navigation links and improve CSS formatting for consistency

--- a/ProyectoBecaTechCh/index.html
+++ b/ProyectoBecaTechCh/index.html
@@ -25,11 +25,11 @@
                     alt="Mascota" loading="lazy" /> </a>
             <div class="nav-links">
 
-                <a href="#inicio" class="changa-one-regular">Inicio</a>
+                
                 <a href="#productos" class="changa-one-regular">Productos</a>
                 <a href="#servicios" class="changa-one-regular">Servicios</a>
-                <a href="#contacto" class="changa-one-regular">Contacto</a>
-                <a href="retos.html" class="changa-one-regular">Retos DEV.F</a>
+                <a href="#contacto" class="changa-one-regular">Ubicación</a>
+                <a href="#newsletter" class="changa-one-regular">Newsletter</a>
             </div>
 
         </nav>
